implemented enchantables list to check if a given item can be enchanted